vcs/specs/parser/fail/expressions/invalid_await.vr
// @test: parse-fail
// @level: L0
// @tags: parser, expressions, await, error
// @description: Await without expression to await
// @expected-error: E018

fn test() {
    let x = .await;  // Await without preceding expression
}
